# libvorbis

./: .gitignore  .travis.yml  README.md  cabal.project  libvorbis.cabal
.circleci/: config.yml
Codec/Audio/Vorbis/: File.hsc  File_helper.c  Raw.hs
Codec/Audio/Vorbis/Enc/: Raw.hsc
Codec/Audio/Vorbis/Enc/Raw/: Internal.hsc  Types.hsc
Codec/Audio/Vorbis/File/: Raw.hs
Codec/Audio/Vorbis/File/Raw/: Decoding.hsc  File.hsc  Internal.hs  Seeking.hsc  Setup.hsc  Types.hsc
Codec/Audio/Vorbis/File/Raw/Decoding/: Internal.hsc
Codec/Audio/Vorbis/File/Raw/File/: Internal.hsc
Codec/Audio/Vorbis/File/Raw/Seeking/: Internal.hsc
Codec/Audio/Vorbis/File/Raw/Setup/: Internal.hsc
Codec/Audio/Vorbis/File/Raw/Types/: Internal.hsc
Codec/Audio/Vorbis/Raw/: Both.hsc  Decoding.hsc  Encoding.hsc  Internal.hs  Metadata.hsc  Types.hsc
Codec/Audio/Vorbis/Raw/Both/: Internal.hsc
Codec/Audio/Vorbis/Raw/Decoding/: Internal.hsc
Codec/Audio/Vorbis/Raw/Encoding/: Internal.hsc
Codec/Audio/Vorbis/Raw/Internal/: Exception.hsc
Codec/Audio/Vorbis/Raw/Metadata/: Internal.hsc
Codec/Container/Ogg/: Raw.hs
Codec/Container/Ogg/Raw/: Bitpacking.hsc  Decoding.hsc  Encoding.hsc  General.hsc  Internal.hs  Types.hsc
Codec/Container/Ogg/Raw/Bitpacking/: Internal.hsc
Codec/Container/Ogg/Raw/Decoding/: Internal.hsc
Codec/Container/Ogg/Raw/Encoding/: Internal.hsc
Codec/Container/Ogg/Raw/General/: Internal.hsc
Codec/Container/Ogg/Raw/Internal/: Exception.hsc
Data/: Field.hs
Data/Field/: Internal.hs
Data/Field/Storable/: TH.hs
libogg/: libogg.cabal
libogg/libogg/include/ogg/: config_types.h
libogg/src/: Libogg.hs
libogg/src/Libogg/: Bitpacking.hsc  Decoding.hsc  Encoding.hsc  General.hsc  Types.hsc
libogg/test/static/: Bind.hsc  Main.hs
libvorbis/: LICENSE  libvorbis.cabal
libvorbis-plus/lib/: vorbisfile-plus.c
libvorbis/cbits/include/extra/: vorbisfile.h
libvorbis/cbits/lib/: vorbisfile.c
libvorbis/libvorbis-plus/include/vorbis/: vorbisfile-plus.h
libvorbis/libvorbis-plus/lib/: vorbisfile-plus.c
libvorbis/src/: Libvorbis.hs  Vorbisenc.hsc  Vorbisfile.hs
libvorbis/src/Libvorbis/: Both.hsc  Decoding.hsc  Encoding.hsc  Metadata.hsc  Return.hsc  Types.hsc
libvorbis/src/Vorbisenc/: Types.hsc
libvorbis/src/Vorbisfile/: Decoding.hsc  File.hsc  Seeking.hsc  Setup.hsc  Types.hsc
libvorbis/test/static/: Bind.hsc  Main.hs
test/: Dynamic.hsc
test/Dynamic/: Bind.hsc
tests/: play.hs
