name:                libvorbis
version:             0.1.0.2
synopsis:            Haskell binding for libvorbis, for decoding Ogg Vorbis audio files
description:         This package gives you a simple high-level API for decoding Ogg Vorbis
                     files or streams, and isn't currently intended to be comprehensive.
                     See the HOgg package in case that's more what you want.
                     .
                     Take a look at the tests/ directory for a minimalistic command-line player.
                     0.1.0.2: Bump base upper bound.
homepage:            https://github.com/the-real-blackh/libvorbis
license:             BSD3
license-file:        LICENSE
author:              Stephen Blackheath
maintainer:          libvorbis.stephen@blacksapphire.com
-- copyright:           
category:            Codec
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:  libogg/include/ogg/*.h
                     libogg/src/*.h
                     libvorbis/include/vorbis/*.h
                     libvorbis/lib/*.h
                     libvorbis/lib/books/coupled/*.h
                     libvorbis/lib/books/floor/*.h
                     libvorbis/lib/books/uncoupled/*.h
                     libvorbis/lib/modes/*.h

source-repository head
  type:     git
  location: https://github.com/the-real-blackh/libvorbis

library
  exposed-modules:     Codec.Audio.Vorbis.File
  -- other-modules:       
  build-depends:       base >= 4.5.0.0 && < 5.0.0.0
                     , bytestring >= 0.10.0.0
                     , cpu >= 0.1.1

  include-dirs:        libogg/include/ogg
                       libogg/src
                       libvorbis/include
                       libvorbis/lib
                       libvorbis/lib/books/coupled
                       libvorbis/lib/books/floor
                       libvorbis/lib/books/uncoupled
                       libvorbis/lib/modes

  ghc-options:         -Wall

  c-sources:           Codec/Audio/Vorbis/File_helper.c
                       libogg/src/bitwise.c
                       libogg/src/framing.c
                       libvorbis/lib/analysis.c
                    -- libvorbis/lib/barkmel.c -- Another main?
                       libvorbis/lib/bitrate.c
                       libvorbis/lib/block.c
                       libvorbis/lib/codebook.c
                       libvorbis/lib/envelope.c
                       libvorbis/lib/floor0.c
                       libvorbis/lib/floor1.c
                       libvorbis/lib/info.c
                       libvorbis/lib/lookup.c
                       libvorbis/lib/lpc.c
                       libvorbis/lib/lsp.c
                       libvorbis/lib/mapping0.c
                       libvorbis/lib/mdct.c
                       libvorbis/lib/psy.c
                    -- libvorbis/lib/psytune.c -- Dead code
                       libvorbis/lib/registry.c
                       libvorbis/lib/res0.c
                       libvorbis/lib/sharedbook.c
                       libvorbis/lib/smallft.c
                       libvorbis/lib/synthesis.c
                    -- libvorbis/lib/tone.c -- Another main?
                       libvorbis/lib/vorbisenc.c
                       libvorbis/lib/vorbisfile.c
                       libvorbis/lib/window.c
