cabal-version:       2.2

name:                libogg
version:             0.1.0.0
synopsis:            Raw Haskell bindings to libogg
description:         Raw Haskell bindings to
                     [libogg](https://xiph.org/ogg/doc/libogg/index.html).
                     Check the README for information on how these
                     bindings operate.
homepage:            https://github.com/burningwitness/libogg
license:             BSD-3-Clause
license-file:        LICENSE
author:              Oleksii Divak
maintainer:          Oleksii Divak <frozenwitness@gmail.com>
copyright:           Copyright © 2022 Oleksii Divak
category:            Codec
build-type:          Simple
extra-source-files:  libogg/include/ogg/*.h
                     libogg/src/*.h

source-repository head
  type:     git
  location: https://github.com/burningwitness/libogg

common includes
  install-includes:    ogg/ogg.h

  include-dirs:        libogg/include
                       libogg/src
  
  c-sources:           libogg/src/bitwise.c
                       libogg/src/framing.c
 
library
  import:              includes

  exposed-modules:     Libogg

  reexported-modules:  storable-offset:Foreign.Storable.Offset

  other-modules:       Libogg.Bitpacking
                       Libogg.Decoding
                       Libogg.Encoding
                       Libogg.General
                       Libogg.Types

  build-depends:       base            >= 4.10 && < 5
                     , storable-offset >= 0.1  && < 0.2

  hs-source-dirs:      src

  ghc-options:         -Wall

  default-language:    Haskell98

test-suite static
  import:              includes

  type:                exitcode-stdio-1.0
  
  main-is:             Main.hs
  
  hs-source-dirs:      src
                       test/static
  
  build-depends:       base            >= 4.10 && < 5
                     , storable-offset >= 0.1  && < 0.2

  other-modules:       Bind

                       Libogg

                       Libogg.Bitpacking
                       Libogg.Decoding
                       Libogg.Encoding
                       Libogg.General
                       Libogg.Types

  default-language:    Haskell98
