cabal-version:       2.2

name:                libogg
version:             0.1.0.0
synopsis:            Raw Haskell bindings to libogg
description:         Raw Haskell bindings to
                     [libogg](https://xiph.org/ogg/doc/libogg/index.html).
                     Check the README for information on how these
                     bindings operate.
homepage:            https://github.com/the-real-blackh/libvorbis
license:             BSD-3-Clause
license-file:        LICENSE
author:              Oleksii Divak
maintainer:          Oleksii Divak <frozenwitness@gmail.com>
category:            Codec
build-type:          Simple
extra-source-files:  libogg/include/ogg/*.h
                     libogg/src/*.h

source-repository head
  type:     git
  location: https://github.com/the-real-blackh/libvorbis

flag ccall
  description: Use the ccall call convention.
  default: False

flag stdcall
  description: Use the stdcall call convention (takes precedence over the ccall flag).
  default: False

library
  exposed-modules:     Libogg

  reexported-modules:  storable-offset:Foreign.Storable.Offset

  other-modules:       Libogg.Bitpacking
                       Libogg.Decoding
                       Libogg.Encoding
                       Libogg.General
                       Libogg.Types

  build-depends:       base            >= 4.10 && < 5
                     , storable-offset >= 0.1  && < 0.2

  hs-source-dirs:      src

  ghc-options:         -Wall

  install-includes:    ogg/ogg.h
                       ogg/os_types.h

  include-dirs:        libogg/include
                       libogg/src
  
  c-sources:           libogg/src/bitwise.c
                       libogg/src/framing.c

  if flag(stdcall)
    cpp-options: -DCALLCV=stdcall
  elif flag(ccall)
    cpp-options: -DCALLCV=ccall
  else
    cpp-options: -DCALLCV=capi

  default-language:    Haskell98
